--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,13 @@ jobs:
           command: dotnet build 
       - run:
           name: Run tests 
-          command: dotnet test --no-build --logger "trx;LogFileName=/root/project/UnitTestProject1/../../xunit-output.xml"
+          command: dotnet test --no-build --logger "trx;LogFileName=/root/project/UnitTestProject1/xunit-output.xml"
       - store_artifacts:
-          path: /root/project/UnitTestProject1../../
+          path: /root/project/UnitTestProject1/*.xml
           when: always
       - run:
           name: coverage
-          command: dotnet.exe test -v n --results-directory:test_coverage --collect:"Code Coverage"
+          command: dotnet test -v n --results-directory:test_coverage --collect:"Code Coverage"
       - store_artifacts:
           path: /root/project/test_coverage/
 
