--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: coverage
 #           command: dotnet test --no-build -v n --results-directory:test_coverage --collect:"Code Coverage"
-          command: dotnet test -c -v minimal 
+          command: dotnet test -c Debug -v minimal 
             --no-build 
             --collect:"XPlat Code Coverage" 
             --results-directory './CodeCoverageResults'
